# YUGMASTRA

./: .env.example  .eslintrc.json  .gitignore  AI_SYSTEM_OVERVIEW.md  CONTAINERS.md  CONTAINERS_GUIDE.md  DEPLOYMENT.md  FINAL_IMPLEMENTATION_COMPLETE.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  PAGE_BEHAVIORS.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START.sh  README.md  REAL_VS_FAKE.md  SECRETS_GENERATION.md  SECURITY.md  START_HERE.md  SYSTEM_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT_QUICK_START.md  WHAT_AI_DOES.md  docker-compose.cyber-range.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  turbo.json  vercel.json
.claude/: settings.local.json
apps/api/: .dockerignore  Dockerfile  main.py  requirements.txt
apps/desktop/: README.md  package.json
apps/mobile/: README.md  app.json  package.json
apps/web/: .dockerignore  .eslintrc.json  Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
ml/models/: custom_nlp.py  custom_transformer.py
nginx/: nginx-https.conf  nginx.conf
scripts/: backup-database.sh  generate-ssl-cert.sh  restore-database.sh
services/: Dockerfile.template
services/ai-engine/: .env.example  AI_ENGINE_STATUS.md  Dockerfile  README.md  main.py  main_enhanced.py  main_simulation.py  monitoring.py  requirements-rag.txt  requirements.txt
services/red-team-ai/: README.md  main.py  pyproject.toml
services/red-team-ai/src/: __init__.py
services/red-team-ai/src/agents/: attack_agent.py
(+201 files in other folders)
