[tool.poetry]
name = "red-team-ai"
version = "0.1.0"
description = "Autonomous Red Team AI Agent"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
numpy = "^1.26.0"
gymnasium = "^0.29.0"
ray = {extras = ["rllib"], version = "^2.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
